# resolved

./: .gitignore  Cargo.toml  README.md  example-config.yaml  flake.nix
.github/: dependabot.yml
.github/scripts/: build-documentation.sh
.github/workflows/: ci.yaml  deploy-documentation.yml
benches/: cache.rs  serialise_deserialise.rs
bin-dnsq/: Cargo.toml
bin-dnsq/src/: main.rs
bin-htoh/: Cargo.toml
bin-htoh/src/: main.rs
bin-htoz/: Cargo.toml
bin-htoz/src/: main.rs
bin-resolved/: Cargo.toml
bin-resolved/benches/: cache.rs
bin-resolved/src/: fs_util.rs  lib.rs  main.rs  metrics.rs
bin-resolved/src/resolver/: cache.rs  forwarding.rs  mod.rs  nonrecursive.rs  recursive.rs  rr_util.rs  util.rs
bin-ztoh/: Cargo.toml
bin-ztoh/src/: main.rs
bin-ztoz/: Cargo.toml
bin-ztoz/src/: main.rs
config/hosts/: 99-example
config/zones/: 00-root.hints  10.in-addr.arpa.zone  16.172.in-addr.arpa.zone  168.192.in-addr.arpa.zone  17.172.in-addr.arpa.zone  18.172.in-addr.arpa.zone  19.172.in-addr.arpa.zone  20.172.in-addr.arpa.zone  21.172.in-addr.arpa.zone  22.172.in-addr.arpa.zone  23.172.in-addr.arpa.zone  24.172.in-addr.arpa.zone  25.172.in-addr.arpa.zone  26.172.in-addr.arpa.zone  27.172.in-addr.arpa.zone  28.172.in-addr.arpa.zone  29.172.in-addr.arpa.zone  30.172.in-addr.arpa.zone  31.172.in-addr.arpa.zone  99-example.hints  invalid.zone  localhost.zone  test.zone
crates/dns-resolver/: Cargo.toml
crates/dns-resolver/src/: cache.rs  forwarding.rs  lib.rs  local.rs  metrics.rs  recursive.rs
crates/dns-resolver/src/util/: fs.rs  mod.rs  nameserver.rs  net.rs  types.rs
crates/dns-types/: Cargo.toml
crates/dns-types/src/: lib.rs
crates/dns-types/src/hosts/: deserialise.rs  types.rs
crates/dns-types/src/protocol/: deserialise.rs  serialise.rs  types.rs
crates/dns-types/src/zones/: deserialise.rs  serialise.rs  types.rs
crates/dnsq/: Cargo.toml
crates/dnsq/src/: main.rs
crates/htoh/: Cargo.toml
crates/htoz/: Cargo.toml
crates/htoz/src/: main.rs
crates/resolved/: Cargo.toml
crates/resolved/src/: lib.rs  main.rs  metrics.rs
crates/ztoh/: Cargo.toml
crates/ztoh/src/: main.rs
crates/ztoz/: Cargo.toml
crates/ztoz/src/: main.rs
docs/: .gitignore  book.toml
docs/src/: SUMMARY.md  cli.md  configuration.md  guides.md  introduction-to-dns.md
docs/src/cli/: conversion-utilities.md  dnsq.md  resolved.md
docs/src/configuration/: hosts-and-zone-files.md  standard-zones.md
docs/src/guides/: override-a-dns-record.md  set-up-lan-dns.md  use-a-dns-blocklist.md
example/: config.yaml  hosts-file  root-hints.zone
fuzz/: Cargo.toml
fuzz/fuzz_targets/: hosts_deserialise_round_trip.rs  hosts_serialise_round_trip.rs  wire_deserialise_round_trip.rs  wire_serialise_round_trip.rs  zone_deserialise_round_trip.rs  zone_serialise_round_trip.rs
lib-dns-resolver/: Cargo.toml
lib-dns-resolver/benches/: cache.rs
lib-dns-resolver/src/: cache.rs  context.rs  forwarding.rs  lib.rs  local.rs  metrics.rs  nonrecursive.rs  recursive.rs
lib-dns-resolver/src/util/: mod.rs  nameserver.rs  net.rs  types.rs
lib-dns-types/: Cargo.toml
lib-dns-types/benches/: serialise_deserialise.rs
lib-dns-types/src/: lib.rs
lib-dns-types/src/hosts/: deserialise.rs  mod.rs  serialise.rs  types.rs
lib-dns-types/src/protocol/: deserialise.rs  serialise.rs  types.rs
lib-dns-types/src/zones/: deserialise.rs  serialise.rs  types.rs
src/: lib.rs  main.rs
src/collections/: mod.rs  namespaced_cache.rs
src/hosts/: deserialise.rs  mod.rs  serialise.rs  types.rs
src/net_util/: mod.rs
src/protocol/: deserialise.rs  mod.rs  serialise.rs  types.rs  wire_types.rs
src/resolver/: cache.rs  mod.rs  rr_util.rs
src/settings/: mod.rs
src/zones/: deserialise.rs  mod.rs  serialise.rs  types.rs
tests/: wire_roundtrip.rs
