[package]
name = "resolved"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
async-recursion = "1"
bytes = "1"
clap = { version = "3", features = ["derive"] }
dns-types = { path = "../lib-dns-types" }
lazy_static = "1"
priority-queue = "1"
prometheus = { version = "0.13.0", features = ["process"] }
rand = "0.8.5"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "io-util", "signal", "sync", "fs", "time"] }

[dev-dependencies]
criterion = "0.3.5"
dns-types = { path = "../lib-dns-types", features = ["test-util"] }

[[bench]]
name = "cache"
harness = false
