[package]
name = "resolved"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
dns-types = { path = "../lib-dns-types" }
dns-resolver = { path = "../lib-dns-resolver" }
lazy_static = "1"
prometheus = { version = "0.13.3", features = ["process"] }
tokio = { version = "1", features = ["fs", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
