[package]
name = "dns-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arbitrary = { version = "1", features = ["derive"], optional = true }
rand = { version = "0.8.5", optional = true }

[dev-dependencies]
arbitrary = { version = "1", features = ["derive"] }
criterion = "0.4.0"
rand = "0.8.5"

[features]
test-util = ["arbitrary", "rand"]

[[bench]]
name = "serialise_deserialise"
harness = false
