[package]
name = "dns-resolver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1"
bytes = "1"
dns-types = { path = "../dns-types" }
priority-queue = "2"
rand = "0.9.1"
tokio = { version = "1", features = ["io-util", "net", "time"] }
tracing = "0.1.41"

[dev-dependencies]
criterion = "0.6.0"
dns-types = { path = "../dns-types", features = ["test-util"] }
