[package]
name = "dns-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arbitrary = { version = "1", features = ["derive"], optional = true }
bytes = "1"
rand = { version = "0.9.0", optional = true }

[dev-dependencies]
arbitrary = { version = "1", features = ["derive"] }
criterion = "0.5.1"
rand = "0.9.0"

[features]
test-util = ["arbitrary", "rand"]
