[package]
name = "dnsq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
dns-types = { path = "../dns-types" }
dns-resolver = { path = "../dns-resolver" }
resolved = { path = "../resolved" }
tokio = { version = "1", features = ["macros", "rt"] }
