[package]
name = "resolved"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.7"
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
dns-types = { path = "../dns-types" }
dns-resolver = { path = "../dns-resolver" }
lazy_static = "1"
prometheus = { version = "0.13.4", features = ["process"] }
tokio = { version = "1", features = ["fs", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
