[package]
name = "resolved"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.4"
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
dns-types = { path = "../dns-types" }
dns-resolver = { path = "../dns-resolver" }
prometheus = { version = "0.13.4", features = ["process"] }
tokio = { version = "1", features = ["fs", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
